             number of parameters every time.
    *   (ms) Better error message in the DBI appender on bad SQL, missing
             bind parameters, or other execute() errors.
    *   (ms) Made DBI test suite more robust against preexisting conditions

1.22 (2009/05/02)
    *   (ms) is_xxx() returned true prior to L4p initialization. Fixed it
             and adapted test suite.
    *   (ms) Added test cases on syswrite in recreate mode
    *   (ms) Applied patch by Jens Berthold <log4perl@jebecs.de> to
             avoid semaphore cleanup in spawned children.
    *   (ms) Added %m{chomp} feature, 'message_chomp_before_newline' option,
             and documentation on newlines and logging messages, all 
             suggested by Tim Bunce (see PatternLayout).

1.21 (2009/03/16)
    *   (ms) Documentation typos fixed, reported by Breno G. de Oliveira
             [rt.cpan.org #42428].
    *   (ms) Fixed DBI appender error message, bug reported by DavidZ.
    *   (ms) Fixed [rt.cpan.org #43740] reported by Martin Koehler. Now using 
             proper POSIX return code EEXISTS instead of error message 
             depending on English locale.

1.20 (2008/12/09)
    *   (ms) Using semctl to reset the value of the semaphore in the 
             Synchronized appender to prevent "Numerical result out of 
             range" problem caused by an unbalanced SEM_UNDO when
             incrementing it. Reported by John Little.
    *   (ms) Added parameters in curly braces to cspecs in PatternLayout.
    *   (ms) As explained in  http://rt.cpan.org/Ticket/Display.html?id=41505
             the latest LWP release (5.822) got rid of all of its internal
             debugging functions, making infiltrate_lwp() and its test
             case useless. Disabling it for LWP>=5.822.
 
1.19 (2008/10/22)
    *   (ms) Applied patch by Peter Rabbitson, which fixes the caller() 
             level when calling get_logger() on a subclass of Log4perl.