@@ -1578,6 +1578,11 @@ to about 85% of Log::Log4perl's normal execution speed for suppressed
 statements. For details, check out L<"Performance">. For more info
 on the signal handler, look for L<Log::Log4perl::Config::Watch/"SIGNAL MODE">.
 
+If you have a somewhat long delay set between physical config file checks
+or don't want to use the signal associated with the config file watcher,
+you can trigger a configuration reload at the next possible time by
+calling C<Log::Log4perl::Config-E<gt>watcher-E<gt>force_next_check()>.
+
 One thing to watch out for: If the configuration file contains a syntax
 or other fatal error, a running application will stop with C<die> if
 this damaged configuration will be loaded during runtime, triggered
