@@ -10,6 +10,8 @@
     *   (ms) Better error message in the DBI appender on bad SQL, missing
              bind parameters, or other execute() errors.
     *   (ms) Made DBI test suite more robust against preexisting conditions
+    *   (ms) Added force_next_check() for init_and_watch(), cleaned up
+             Config::Watcher code.
 
 1.22 (2009/05/02)
     *   (ms) is_xxx() returned true prior to L4p initialization. Fixed it
